refactor: 재설계 시작. 필요한 것들 부터 구현